--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- OWl Carousel CSS Files -->
-    <link rel="stylesheet" href="js/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="js/plugins/owl-carousel/owl.theme.css">
-    <link rel="stylesheet" href="js/plugins/owl-carousel/owl.transitions.css">
+    <link rel="stylesheet" href="./js/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="./js/plugins/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="./js/plugins/owl-carousel/owl.transitions.css">
     <!-- ANIMATE CSS -->
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="./css/animate.css">
     <!-- Video Pop Up Plugin -->
-    <link rel="stylesheet" href="js/plugins/YouTube_PopUp-master/YouTubePopUp.css">
+    <link rel="stylesheet" href="./js/plugins/YouTube_PopUp-master/YouTubePopUp.css">
     <!-- PRELOADER -->
-    <link rel="stylesheet" href="css/preloader.css">
+    <link rel="stylesheet" href="./css/preloader.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Gescob - Jr Ingenieria</title>
 </head>
 
@@ -112,7 +112,7 @@
                             <p class="sub">Creditos Y Cobranzas</p>
                             <!-- <a class="btn btn-primary" href="#">Download Now</a> -->
                             <!-- / Macbook IMG / -->
-                            <img class="img-fluid mx-auto wow fadeInUp imagenPpal" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screen1.png"  alt="macbook">
+                            <img class="img-fluid mx-auto wow fadeInUp imagenPpal" data-wow-duration="1s" data-wow-delay=".3s" src="./imgs/screen1.png"  alt="macbook">
                         </div>
                     </div>
                 </div>
@@ -174,13 +174,13 @@
                 </div>
                 <div class="col-md-7 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="img-table">
-                        <img src="imgs/ventacambio.png" class="img-fluid" alt="table">
+                        <img src="./imgs/ventacambio.png" class="img-fluid" alt="table">
                     </div>
                 </div>
             </div>
             <div class="row seconde">
                 <div class="col-md-7 wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <img src="imgs/movil.jpg" class="img-fluid" alt="update">
+                    <img src="./imgs/movil.jpg" class="img-fluid" alt="update">
                 </div>
                 <div class="col-md-5 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="caption">
@@ -248,7 +248,7 @@
                                 <i data-vi="bullhorn" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                             </div>
                             <p class="quote">"GESCOB, es una completa solución para la facturación de tu negocio, una manera fácil, intuitiva y sencilla de gestionar y controlar todo lo que antes te causaba estrés."</p>
-                            <img src="imgs/1.png" class="img-fluid" alt="1">
+                            <img src="./imgs/1.png" class="img-fluid" alt="1">
                             <h4>Justo González</h4>
                             <span>CEO Fundador</span>  
                             <div class="col-md-11 iconos" data-wow-duration=".5s" data-wow-delay=".2s">
@@ -360,15 +360,15 @@
             </div>
             <div class="row">
                 <div id="owl-screenshots">
-                    <div class="item"><img src="imgs/caja.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/crearventa.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/detalle.png" class="img-fluid" alt="screen-3"></div>
-                    <div class="item"><img src="imgs/factura.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/mov.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/movimiento.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/nuevacompra.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/nuevaventa.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/productos.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="./imgs/caja.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="./imgs/crearventa.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="./imgs/detalle.png" class="img-fluid" alt="screen-3"></div>
+                    <div class="item"><img src="./imgs/factura.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="./imgs/mov.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="./imgs/movimiento.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="./imgs/nuevacompra.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="./imgs/nuevaventa.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="./imgs/productos.png" class="img-fluid" alt="screen-2"></div>
                 </div>
             </div>
         </div>
@@ -382,7 +382,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 video-box">
-                    <img src="imgs/video-bg.png" class="img-fluid wow rotateIn" data-wow-duration=".5s" data-wow-delay=".2s" alt="popup">
+                    <img src="./imgs/video-bg.png" class="img-fluid wow rotateIn" data-wow-duration=".5s" data-wow-delay=".2s" alt="popup">
                     <div class="play-button">
                         <a class="bla-2 wow flipInY" data-wow-duration=".5s" data-wow-delay=".4s" href="https://www.youtube.com/watch?v=063ISyPmpME"><i class="material-icons">play_arrow</i></a>
                         <div class="waves-block">
@@ -412,7 +412,7 @@
                 <!-- /// TEAM MEMBERS /// -->
                 <div class="col-md-3 member wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
-                        <img src="imgs/team/team1.png" class="img-fluid" alt="team-1">
+                        <img src="./imgs/team/team1.png" class="img-fluid" alt="team-1">
                     </div>
                     <h4>Rodney Pereira</h4>
                     <p>Proyect Manager</p>
@@ -424,7 +424,7 @@
                 </div>
                 <div class="col-md-3 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="member-img">
-                        <img src="imgs/team/team-2.png" class="img-fluid" alt="team-2">
+                        <img src="./imgs/team/team-2.png" class="img-fluid" alt="team-2">
                     </div>
                     <h4>Jessica Centurión</h4>
                     <p>Desarrollador</p>
@@ -436,7 +436,7 @@
                 </div>
                 <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
-                        <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
+                        <img src="./imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Kevin Torres</h4>
                     <p>Desarrollador Web</p>
@@ -448,7 +448,7 @@
                 </div>
                 <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
-                        <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
+                        <img src="./imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Fernando Delgado</h4>
                     <p>Desarrollador Web</p>
@@ -553,14 +553,14 @@
     <script src="https://cdn.jsdelivr.net/npm/vivid-icons"></script>
     <script src="https://unpkg.com/vivid-icons"></script>
     <!-- OWL Carousel -->
-    <script src="js/plugins/owl-carousel/owl.carousel.js"></script>
+    <script src="./js/plugins/owl-carousel/owl.carousel.js"></script>
     <!-- Video Pop Up Plugin -->
-    <script src="js/plugins/YouTube_PopUp-master/YouTubePopUp.jquery.js"></script>
-    <script src="js/plugins/wow/wow.min.js"></script>
+    <script src="./js/plugins/YouTube_PopUp-master/YouTubePopUp.jquery.js"></script>
+    <script src="./js/plugins/wow/wow.min.js"></script>
     <!-- Easing -->
-    <script src="js/plugins/jquery.easing.min.js"></script>
+    <script src="./js/plugins/jquery.easing.min.js"></script>
     <!-- Main JS -->
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 </html>
