arreglo de div de video

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <h3>Desde cualquier sitio.</h3>
                         <p>Con Gescob puede gestionar su empresa desde el sitio en que se encuentre, de forma rápida y segura.</p>
                         <p>Podrá acceder a la información de su negocio de forma centralizada y actualizada en tiempo real.</p>
-                        <button class="btn btn-secondary" type="button">Learn More</button>
+                        <!-- <button class="btn btn-secondary" type="button">Learn More</button> -->
                     </div>
                 </div>
             </div>
@@ -379,12 +379,12 @@
     <!-- ==============================================
     VIDEO POP UP 
     =============================================== -->
-
+    <section class="video">
     <div id="video-popup">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 video-box">
-                    <img src="imgs/video-bg.png" class="img-fluid wow rotateIn" data-wow-duration=".5s" data-wow-delay=".2s" alt="popup">
+                    <img src="imgs/login.png" class="img-fluid wow rotateIn login" data-wow-duration=".5s" data-wow-delay=".2s" alt="popup">
                     <div class="play-button">
                         <a class="bla-2 wow flipInY" data-wow-duration=".5s" data-wow-delay=".4s" href="https://www.youtube.com/watch?v=063ISyPmpME"><i class="material-icons">play_arrow</i></a>
                         <div class="waves-block">
@@ -397,7 +397,7 @@
             </div>
         </div>
     </div>
-
+</section>
     <!-- ==============================================
     TEAM
     =============================================== -->
