Cambios en horario

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
                     <!-- /// Title /// -->
-                    <h2 class="section-title">Nuestro Equipo de expertos:</h2>
+                    <h2 class="section-title">Nuestro Equipo de expertos</h2>
                     <!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p> -->
                 </div>
             </div>
@@ -475,7 +475,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
                     <!-- /// Title /// -->
-                    <h2 class="section-title">Contacta Conmigo!</h2>
+                    <h2 class="section-title">Contacta Conmigo</h2>
                 </div>
             </div>
 
@@ -525,7 +525,7 @@
                             <!-- / Caption / -->
                             <p>Prof. Ing. Justo R. Gonzalez<br> 
                                 +595 981 420 987<br> 
-                                Lunes a Viernes de 8:00-17:00 hs.</p>
+                                Lunes a Viernes de 8:00 a 17:00 hs.</p>
                         </div>
                         <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                             <!-- /// Icon /// -->
