--- a/index.html
+++ b/index.html
@@ -291,54 +291,55 @@
                 <div class="col-lg-4 wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="price-table">
                         <div class="header">
-                            <h5 class="title">Basic</h5>
-                            <div class="price">0$</div>
-                            <h4>Free</h4>
+                            <h5 class="title">Básico</h5>
+                            <div class="price">100.000 Gs.</div>
+                            <h4>Incluye</h4>
                         </div>
                         <ul>
-                            <li>press Theme</li>
-                            <li>50GB Disk Space</li>
-                            <li>50 Email Accounts</li>
-                            <li>High Speed Internet</li>
-                            <li>Free Theme Installation</li>
+                            <li>Stock</li>
+                            <li>Compras</li>
+                            <li>Ventas Lí­mite 40.000.000</li>
+                            <li>Configuraciones</li>
+                            <li>Caja</li>
                         </ul>
-                        <button class="btn btn-transparent" type="button">Sign Up</button>
+                        <button onclick="location.href='https://wa.link/x8pf5u'" target="_blank" class="btn btn-transparent"  type="button">Adquiere</button>                    
                     </div>
-                </div>
+                        
+                    </div>
                 <!--// First Table // -->
                 <div class="col-lg-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="price-table">
                         <div class="header">
-                            <h5 class="title">Pro</h5>
-                            <div class="price">10$</div>
-                            <h4>Per Month</h4>
+                            <h5 class="title">Estándar</h5>
+                            <div class="price">150.000 Gs.</div>
+                            <h4>Incluye</h4>
                         </div>
                         <ul>
-                            <li>Wordpress Theme</li>
-                            <li>50GB Disk Space</li>
-                            <li>50 Email Accounts</li>
-                            <li>High Speed Internet</li>
-                            <li>Free Theme Installation</li>
+                            <li>Stock</li>
+                            <li>Compras</li>
+                            <li>Ventas Límite 80.000.000</li>
+                            <li>Configuraciones</li>
+                            <li>Caja</li>
                         </ul>
-                        <button class="btn btn-primary" type="button">Sign Up</button>
+                        <button onclick="location.href='https://wa.link/vj6c91'" class="btn btn-primary" type="button">Adquiere</button>
                     </div>
                 </div>
                 <!--// First Table // -->
                 <div class="col-lg-4 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="price-table">
                         <div class="header">
-                            <h5 class="title">Ultimate Plan</h5>
-                            <div class="price">50$</div>
-                            <h4>Per Year</h4>
+                            <h5 class="title">Premium</h5>
+                            <div class="price">200.000 Gs.</div>
+                            <h4>Incluye</h4>
                         </div>
                         <ul>
-                            <li>Wordpress Theme</li>
-                            <li>50GB Disk Space</li>
-                            <li>50 Email Accounts</li>
-                            <li>High Speed Internet</li>
-                            <li>Free Theme Installation</li>
+                            <li>Stock</li>
+                            <li>Compras</li>
+                            <li>Ventas Ilimitado</li>
+                            <li>Configuraciones</li>
+                            <li>Caja</li>
                         </ul>
-                        <button class="btn btn-transparent" type="button">Sign Up</button>
+                        <button onclick="location.href='https://wa.link/ca2wmh'" class="btn btn-transparent" type="button">Adquiere</button>
                     </div>
                 </div>
             </div>
@@ -419,9 +420,9 @@
                     <h4>Rodney Pereira</h4>
                     <p>Proyect Manager</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
@@ -431,21 +432,21 @@
                     <h4>Jessica Centurión</h4>
                     <p>Desarrollador</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
-                    <h4>Kevin Torres</h4>
-                    <p>Desarrollador Web</p>
+                    <h4>Fernando Delgado</h4>
+                    <p>Web Development </p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
@@ -455,9 +456,9 @@
                     <h4>Fernando Delgado</h4>
                     <p>Desarrollador Web</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -516,7 +517,7 @@
                             <!-- // Title // -->
                             <h4>Direccion</h4>
                             <!-- / Caption / -->
-                            <p>Luciano Vera #401 <br>casi San Patricio, Capiatá, Central, Paraguay</p>
+                            <p>Luciano Vera #401 <br>San Patricio, Capiatá, Central Paraguay.</p>
                         </div>
                         <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                             <!-- /// Icon /// -->
@@ -526,7 +527,7 @@
                             <!-- / Caption / -->
                             <p>Prof. Ing. Justo R. Gonzalez<br> 
                                 +595 981 420 987<br> 
-                                Lunes a Viernes , 8:00-17:00.</p>
+                                Lunes a Viernes de 8:00-17:00 hs.</p>
                         </div>
                         <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                             <!-- /// Icon /// -->
